--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "JSON": "^1.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.10"
   }
 }
